 cnp-ingress-mysql-stig-v-235146-block-unused-ports-b4au9sr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-ingress-mysql-stig-v-235146-block-unused-ports-het4wc6
  namespace: explorer
spec:
  description: "To block all unused ports on MySQL pod"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: mysql
      controller-revision-hash: mysql-7d648d884
      helm.sh/chart: mysql-8.6.1
      statefulset.kubernetes.io/pod-name: mysql-0
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: mysql
  ingress:
    - fromEndpoints:
      - matchLabels:
          role: frontend # Change your match labels
      toPorts:
        - ports:
            - port: "3306"
        - ports:
            - port: "33060"
